--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -35,6 +35,9 @@ body.sticky-bottom-footer {
 .profile {
   img {
     width: 100%;
+    max-width: 200px;
+    display: block;
+    margin: 0 auto;
   }
 }
 
